--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -1,7 +1,13 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=6AEA3859492C60B62B7576B6EC4C2C73
-ProjectName=First Person BP Game Template
+ProjectName=Root Of All Evil
 
 [StartupActions]
 bAddPacks=True
 InsertPack=(PackSource="StarterContent.upack",PackName="StarterContent")
+
+[/Script/MoviePlayer.MoviePlayerSettings]
+bWaitForMoviesToComplete=True
+bMoviesAreSkippable=False
++StartupMovies=yt5s.com-Unreal Engine Intro
+
