Added Icon for build plus map.

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -1,6 +1,8 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=6AEA3859492C60B62B7576B6EC4C2C73
 ProjectName=Root Of All Evil
+CompanyName=No Clue
+ProjectDisplayedTitle=NSLOCTEXT("[/Script/EngineSettings]", "95A558A74DF7745EA5918E8B223B810E", "Root of all Evil!")
 
 [StartupActions]
 bAddPacks=True
