--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,6 @@ Saved
 *.xcworkspace
 Content/StarterContent/Architecture/Floor_400x400.uasset
 Content/StarterContent/HDRI/HDRI_Epic_Courtyard_Daylight.uasset
+Content/StarterContent/Architecture/Floor_400x400.uasset
+Content/StarterContent/Blueprints/Blueprint_CeilingLight.uasset
+Content/StarterContent/HDRI/HDRI_Epic_Courtyard_Daylight.uasset
